fix: horizontal scroll

--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -10,6 +10,7 @@ html {
 }
 
 .main-wrapper {
+  position: relative;
   display: flex;
   flex: 0 0;
   flex-direction: column;
